# bayesian-inference-using-GP

./: README copy.md  README.md  pyproject.toml
dataset/: datacomp_hourly.csv  datacomp_monthly.csv  datafield_hourly.csv  datafield_monthly.csv
examples/: pymc-gp-example.ipynb  pymc-gp-toy_model.ipynb  pymc-koh-example.ipynb
