[project]
name = "pymc-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blackjax>=1.2.5",
    "graphviz>=0.21",
    "ipywidgets>=8.1.7",
    "jax>=0.8.0",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "numpyro>=0.19.0",
    "pymc>=5.25.1",
]
